# cpp17_monadic_operations

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
monadic_operations/: monadic_operations.hpp
tests/: CMakeLists.txt  and_then_tests.cpp  filter_tests.cpp  monadic_combination_tests.cpp  or_else_tests.cpp  tests.cpp  track_copies.hpp  transform_tests.cpp
